--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:hint="Email"
         android:layout_marginBottom="6dp"
 
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtEmailSignIn"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="6dp"
         app:endIconMode="password_toggle"
         android:hint="Password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtPasswordSignIn"
